<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FriendDetailActivity">

    <!--顶部标题-->
    <RelativeLayout
        android:id="@+id/title"
        style="@style/HeadRelativeLayout">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_detail"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/back"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <!--头像-->
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/item">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_text"/>
        <ImageView
            android:id="@+id/head_icon"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/head"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--用户名-->
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/item">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName_text"/>
        <TextView
            android:id="@+id/userName_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--昵称-->
    <RelativeLayout
        android:id="@+id/nickname_re"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/item">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname_text"/>
        <ImageView
            android:id="@+id/next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/next"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/nickname_text"
            android:layout_toLeftOf="@+id/next"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <!--邮箱-->
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/item">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"/>
        <TextView
            android:id="@+id/email"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--删除好友-->
    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/button_circle_delete"
        android:layout_margin="10dp"
        android:text="@string/delete_friend"
        android:textColor="@android:color/white"/>


</LinearLayout>