<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/item"
    tools:context=".fragment.MineFragment">
    <!--顶部标题-->
    <RelativeLayout
        android:id="@+id/title"
        style="@style/HeadRelativeLayout">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_info"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <!--头像-->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/head_img"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_text"
            android:textSize="18dp"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/next_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/next_head"
            android:id="@+id/head_show"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@mipmap/head"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <!--用户名-->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName_text"
            android:textSize="14dp"/>
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/userName_show"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户名"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <!--昵称-->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="14dp"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/name_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_toLeftOf="@+id/name_next"
            android:id="@+id/name_show"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="昵称"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <!--二维码名片-->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/qr_code"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_text"
            android:textSize="14dp"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/qr_code_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_toLeftOf="@+id/qr_code_next"
            android:id="@+id/qr_code_show"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/qrcode"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <!--修改密码-->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_text"
            android:textSize="14dp"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/change_password_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--退出登录-->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_circle"/>
    </RelativeLayout>

</LinearLayout>