<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <!--顶部标题-->
    <RelativeLayout
        android:id="@+id/title"
        style="@style/HeadRelativeLayout">

        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/back"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <!--中间log-->
    <ImageView
        android:layout_marginBottom="40dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/name_re"
        android:background="@mipmap/logo"
        android:layout_centerHorizontal="true">
    </ImageView>
    <!--用户名-->
    <RelativeLayout
        android:id="@+id/name_re"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/name"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/name_icon">
        </ImageView>
        <EditText
            android:id="@+id/name_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_input_bg"
            android:hint="@string/name_hint">

        </EditText>
    </RelativeLayout>
    <!--密码-->
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name_re"
        android:id="@+id/password"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/password_icon"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/password_icon">
        </ImageView>
        <EditText
            android:id="@+id/password_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/password_icon"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_input_bg"
            android:hint="@string/password_hint">

        </EditText>
    </RelativeLayout>
    <!--确认密码-->
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/password"
        android:id="@+id/password_re"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/password_icon_re"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/password_icon">
        </ImageView>
        <EditText
            android:id="@+id/password_text_re"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/password_icon_re"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_input_bg"
            android:hint="@string/renew_password">

        </EditText>
    </RelativeLayout>
    <Button
        android:id="@+id/summit_register"
        android:layout_below="@id/password_re"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/summit_register"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_circle">

    </Button>

</RelativeLayout>