<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangeNickNameActivity">
    <!--顶部标题-->
    <RelativeLayout
        android:id="@+id/title"
        style="@style/HeadRelativeLayout">

        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/back"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_nickname"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/nickname_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/nickname_te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="备注名："
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18dp"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_below="@+id/nickname_te"
            android:id="@+id/nickname_edit"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_input_bg"
            android:hint="@string/nickname_hint">
        </EditText>

    </RelativeLayout>

    <Button
        android:id="@+id/submit_nickname"
        android:layout_below="@id/nickname_re"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/summit"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_circle">

    </Button>

</LinearLayout>