<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--顶部标题-->
    <RelativeLayout
        android:id="@+id/title"
        style="@style/HeadRelativeLayout">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:layout_marginLeft="10dp">
        </TextView>

        <ImageView
            android:id="@+id/add"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/add"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp">

        </ImageView>

    </RelativeLayout>
    <!-- TODO: Update blank fragment layout -->
    <!--搜索框-->
    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:singleLine="true"
            android:background="@drawable/serach_style"
            android:drawableLeft="@mipmap/search"
            android:textColor="@android:color/holo_blue_light"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:hint="@string/search_name"/>
    </RelativeLayout>
    <!--群聊-->
    <RelativeLayout
        android:id="@+id/re_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/group"
            android:id="@+id/group_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/group"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:gravity="left|center_vertical"
            android:layout_toRightOf="@+id/group_icon"
            android:textColor="@android:color/holo_blue_light"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>